<resources>
    <string name="app_name">Wyyk Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="APIString">d9abb2c1d05c5882e937cffd1ecd4923</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_list_view">City list view</string>
    <string name="wyyk_weather">WyyK WeaTher</string>
    <string name="search_city">Search city...</string>
    <string name="cloudy">Cloudy</string>
    <string name="_32_c">32°C</string>
    <string name="_8_km_h">8 km/h</string>
    <string name="_47">47 %</string>
    <string name="cities">Cities</string>
    <string name="nairobi_city">Nairobi City</string>

    <string name="menu_search_title">Search</string>
    <string name="menu_search_hint">Write a city name here</string>
    <string name="empty_state_message">Either you have not made a search or there is nothing to show for your search.</string>
    <string name="city_not_found_toast_message">City is not found</string>
    <string name="connection_error_message">There was something wrong with the connection.</string>
    <string name="missing_api_key_message">API Key not added. Please add it.</string>
    <string name="weather_icon_description">Weather Icon</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="forecast">Forecast</string>
    <string name="it_was_last_updated_on">It was last updated on:</string>
    <string name="feels_like">Feels like;</string>
    <string name="today">Today</string>
    <string name="close_app">Close App</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="general">General</string>
    <string name="favorite_cities">My favorite cities</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_accept_terms_and_services">I accept policy and </string>
    <string name="terms">terms</string>
    <string name="register">Register</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="google">google</string>
    <string name="web_client_id">160296936749-b9lbgqk6cdi90pv27rab4nv7rim8inr5.apps.googleusercontent.com</string>
    <string name="favTxt">Would you like to add this city to favorite list?</string>
    <string name="favTxt2">Please consider creating an account with us to have maximo experience of WyyK Weather.</string>
    <string name="create_account">Create Account</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome</string>
    <string name="or">or</string>
    <string name="continue_without_account">Continue Without Account</string>

</resources>