<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/splashFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SplashScreen">

    <LinearLayout
        android:id="@+id/splashView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/undraw_weather_logo"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/landing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="serif"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/undraw_weather_logo" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/Continue"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_ring_btn"
            android:text="@string/continue_without_account"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <include layout="@layout/divider_with_or" />

        <LinearLayout
            android:id="@+id/continue_with_google"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/list_ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/google"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="serif"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>