<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/cloudy_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/icon"
                        android:src="@drawable/baseline_place_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/city"
                        android:text="@string/today"
                        android:textStyle="bold"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <ImageView
                    android:id="@+id/create_note"
                    android:src="@drawable/baseline_create_24"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/status"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:fontFamily="serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/temperature"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="60sp"
                        android:fontFamily="serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:src="@drawable/baseline_air_20"
                                android:layout_width="18dp"
                                android:layout_height="18dp"/>

                            <TextView
                                android:id="@+id/wind_speed"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12sp"
                                android:fontFamily="serif"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>


                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:src="@drawable/baseline_water_drop_20"
                                android:layout_width="18dp"
                                android:layout_height="18dp"/>

                            <TextView
                                android:id="@+id/water_drop"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12sp"
                                android:fontFamily="serif"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_height="46dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_marginStart="12dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="serif"
                   android:layout_gravity="center"
                   android:text="@string/search_for_a_city"
                   android:textColor="@color/white"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <ImageView
                   android:id="@+id/search_city"
                   android:layout_width="28dp"
                   android:layout_height="28dp"
                   android:clickable="true"
                   android:focusable="true"
                   android:layout_marginStart="12dp"
                   android:layout_gravity="center"
                   android:src="@drawable/ic_baseline_search_24" />
           </LinearLayout>


           <LinearLayout
               android:id="@+id/search_view"
               android:visibility="gone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <include layout="@layout/search_toolbar"/>
           </LinearLayout>


       </LinearLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8.0dip"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/cities"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cities_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:layoutAnimation="@anim/layout_animation"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>